--- a/cs497WebProject/app/Resources/views/index.html.twig
+++ b/cs497WebProject/app/Resources/views/index.html.twig
@@ -1,4 +1,4 @@
-{% extends "@FOSUser/layout.html.twig" %}
+{% trans_default_domain 'FOSUserBundle' %}
 {% block fos_user_content %}
 <!DOCTYPE html>
 <html lang="en">
@@ -25,7 +25,13 @@
               <a class="nav-link active" href="{{ path('home') }}">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ path('fos_user_security_login') }}">Login</a>
+              {% if user %}
+              <a class="nav-link" href="{{ path('fos_user_security_logout') }}">{{ user.username }} Logout</a>
+              
+              {% else %}
+              <a class="nav-link" href="{{ path('fos_user_security_login') }}"> Login</a>
+              {% endif %}
+      
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{{ path('fos_user_registration_register') }}">Register</a>
